--- a/lootcheck/package.json
+++ b/lootcheck/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "sfcookies": "^1.0.2"
   },
   "scripts": {
@@ -19,9 +20,11 @@
   },
   "devDependencies": {
     "enzyme": "^3.2.0",
+    "fetch-mock": "^5.13.1",
     "jest-cli": "^20.0.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-test-renderer": "^16.2.0"
+    "react-test-renderer": "^16.2.0",
+    "redux-mock-store": "^1.3.0"
   }
 }
