--- a/lootcheck/package.json
+++ b/lootcheck/package.json
@@ -26,5 +26,12 @@
     "react-dom": "^16.2.0",
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.3.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.js", 
+      "!src/index.js",
+      "!src/tempPolyfills.js"
+    ]
   }
 }
